--- a/ahmad/css/custom.css
+++ b/ahmad/css/custom.css
@@ -2,3 +2,8 @@ h1 {
     border: solid;
     color: green;
 }
+.jones{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
