--- a/ahmad/css/custom.css
+++ b/ahmad/css/custom.css
@@ -1,9 +1,8 @@
-h1 {
+canvas {
     border: solid;
-    color: green;
+    border-color: blue;
 }
-.jones{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+
+ section {
+     margin-top: 15px;
+ }
